// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo Snapshots Height 1`] = `
<img
  height={100}
  src="https://api.logos.staccsandbox.com/undefined"
/>
`;

exports[`Logo Snapshots No props 1`] = `
<img
  height={48}
  src="https://api.logos.staccsandbox.com/undefined"
/>
`;

exports[`Logo Snapshots brand 1`] = `
<img
  alt="dnb"
  height={48}
  src="https://api.logos.staccsandbox.com/dnb"
/>
`;

exports[`Logo Snapshots width 1`] = `
<img
  height={48}
  src="https://api.logos.staccsandbox.com/undefined"
  width={100}
/>
`;
